--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
+neogradle.subsystems.parchment.minecraftVersion=1.20.1
+neogradle.subsystems.parchment.mappingsVersion=2023.09.03
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20.1
@@ -28,10 +29,10 @@ loader_version_range=[47,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+mapping_version=2023.09.03-1.20.1
 
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
