--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,15 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
+    maven {
+        name 'Curse Maven'
+        url "https://www.cursemaven.com"
+    }
+
+    maven {
+        name 'IzzelAliz Maven'
+        url 'https://maven.izzel.io/releases/'
+    }
 }
 
 dependencies {
@@ -150,7 +159,11 @@ dependencies {
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-
+    implementation "curse.maven:modern-ui-${modernui_path}"
+    // Modern UI core framework
+    implementation "icyllis.modernui:ModernUI-Core:${modernui_version}"
+    // Modern UI core extensions
+    implementation "icyllis.modernui:ModernUI-Markdown:${modernui_version}"
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
