--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,10 @@ loader_version_range=[47,)
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
+
+modernui_version=3.11.0
+modernui_path=352491:5724639
+
 mod_id=fpsmatch
 # The human-readable display name for the mod.
 mod_name=FPSMatch
