--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -28,6 +28,12 @@ description='''${mod_description}'''
    ordering="NONE"
    side="BOTH"
 [[dependencies."${mod_id}"]]
+   modId="modernui" #mandatory
+   mandatory=true #mandatory
+   versionRange="[3.11.0,)" #mandatory
+   ordering="NONE"
+   side="CLIENT"
+[[dependencies."${mod_id}"]]
    modId="minecraft"
    mandatory=true
    versionRange="${minecraft_version_range}"
