--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -21,15 +21,24 @@ version="${mod_version}" #mandatory
 displayName="${mod_name}" #mandatory
 authors="${mod_authors}" #optional
 description='''${mod_description}'''
+
 [[dependencies."${mod_id}"]] #optional
    modId="forge" #mandatory
    mandatory=true #mandatory
    versionRange="${forge_version_range}" #mandatory
    ordering="NONE"
    side="BOTH"
+
 [[dependencies."${mod_id}"]]
    modId="minecraft"
    mandatory=true
    versionRange="${minecraft_version_range}"
    ordering="NONE"
    side="BOTH"
+
+[[dependencies."${mod_id}"]]
+  modId="tacz"
+  mandatory=true
+  versionRange="[1.0.0,)"
+  ordering="NONE"
+  side="BOTH"
