--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -42,3 +42,10 @@ description='''${mod_description}'''
   versionRange="[1.0.0,)"
   ordering="NONE"
   side="BOTH"
+
+[[dependencies."${mod_id}"]]
+  modId="modernui"
+  mandatory=true
+  versionRange="[3.11.0,)"
+  ordering="NONE"
+  side="CLIENT"
