--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,7 @@ org.gradle.daemon=false
 neogradle.subsystems.parchment.minecraftVersion=1.20.1
 neogradle.subsystems.parchment.mappingsVersion=2023.09.03
 
-# The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20.1
-# The Minecraft version range can use any release version of Minecraft as bounds.
-# Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
-# as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=47.3.11
@@ -15,23 +11,8 @@ forge_version=47.3.11
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[47,)
-# The mapping channel to use for mappings.
-# The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
-# Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
-#
-# | Channel   | Version              |                                                                                |
-# |-----------|----------------------|--------------------------------------------------------------------------------|
-# | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
-# | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
-#
-# You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-# See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
-#
-# Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
-# Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
-
 modernui_core_version=3.11.0
 modernui_forge_version=3.11.0.+
 mod_id=fpsmatch
@@ -46,6 +27,6 @@ mod_version=1.0-SNAPSHOT
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.phasetranscrystal
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=SSOrangeCATY
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=FPS Match Mod for Minecraft.
