--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = mod_group_id
+mod_version = mod_version + "-" + new Date().format("yyyyMMdd")
 version = mod_version
 
 base {
@@ -135,7 +136,6 @@ tasks.named('processResources', ProcessResources).configure {
     filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
         expand replaceProperties + [project: project]
     }}
-
 // Example for how to get properties into the manifest for reading at runtime.
 tasks.named('jar', Jar).configure {
     manifest {
