--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,8 @@ mod_name=FPSMatch
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0-ClosedTesting
+mod_version=1.0
+file_version = ClosedTesting
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
