--- a/gradle.properties
+++ b/gradle.properties
@@ -30,4 +30,6 @@ mod_group_id=com.phasetranscrystal
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=SSOrangeCATY
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=FPS Match Mod for Minecraft.
+mod_description=FPS Match Mod for Minecraft.\
+  \ website : https://space.bilibili.com/21254202
+
