--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ mod_name=FPSMatch
 mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.0
-file_version = ClosedTesting
+file_version=ClosedTesting
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
