--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ forge_version_range=[47,)
 loader_version_range=[47,)
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
-modernui_core_version=3.11.0
-modernui_forge_version=3.11.1.+
+modernui_core_version=3.11.1
+modernui_forge_version=3.11.1.6
 mod_id=fpsmatch
 # The human-readable display name for the mod.
 mod_name=FPSMatch
