添加了空白音效占位文件 修改了部分冗余代码 增加了切换自定义UI按键 完善了中文语言文件

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ run/
 /.eclipse/configurations/FPSMatch - runGameTestServerSlim.launch
 /.eclipse/configurations/FPSMatch - runServerSlim.launch
 /logs/
+/.eclipse/
