--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import java.text.SimpleDateFormat
-
 buildscript {
     repositories {
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
@@ -21,7 +19,7 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = mod_group_id
-file_version = file_version + "-" + new SimpleDateFormat("yyyy-MM-dd").format(new Date(System.currentTimeMillis()))
+file_version = file_version + "-" + mod_version
 version = file_version
 
 base {
