--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,10 @@ mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 modernui_core_version=3.11.1
 modernui_forge_version=3.11.1.6
+
+kotlin_forge_version=4.11.0
+cs_grenade_version=1.2.8
+
 mod_id=fpsmatch
 # The human-readable display name for the mod.
 mod_name=FPSMatch
