v 1.2.5 ADD - 支持使用tacz交互按键对比赛掉落物进行拾取了 ADD - 支持使用右键来拾取比赛掉落物了 如超过上限则会替换同个类型的物品 CHANGE - 调整了比赛掉落物的渲染 现在枪械和刀具会平躺在地上了 CHANGE - 调整了本地音乐播放器的暂停逻辑 现在不再会取消所有音效的播放了。 CHANGE - 模组的所有物品堆叠上限全部改为了1 UPDATE - 更新了tacz依赖

--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ dependencies {
         exclude group: "it.unimi.dsi", module: "fastutil"
     }
     implementation fg.deobf("icyllis.modernui:ModernUI-Forge:${minecraft_version}-${modernui_forge_version}")
-    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
+    implementation fg.deobf("maven.modrinth:timeless-and-classics-zero:${tacz_version}")
     implementation fg.deobf("curse.maven:tacz-lesraisins-tactical-equipements-1273094:6584599")
     implementation fg.deobf("maven.modrinth:counterstrikegrenade:${cs_grenade_version}")
     runtimeOnly fg.deobf("maven.modrinth:kotlin-for-forge:${kotlin_forge_version}")
