--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ modernui_forge_version=3.11.1.6
 
 kotlin_forge_version=4.11.0
 cs_grenade_version=1.2.8
+tacz_version=1.1.6-hotfix
 
 mod_id=fpsmatch
 # The human-readable display name for the mod.
