--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@ modernui_core_version=3.11.1
 modernui_forge_version=3.11.1.6
 
 kotlin_forge_version=4.11.0
+cloth_config_version=11.1.136+forge
+
 cs_grenade_version=1.2.8
 tacz_version=1.1.6-hotfix
 
