v 1.3.0 Part 2 CHANGE - FPSMCommand 结构更改 ADD - Team Capability支持指令自动注册 ADD - 支持 ClothConfig CHANGE - 解耦TeamCapability 额外拓展MapCapability ADD - 新增MapCapability ADD - FPSMCapabilityManager 新增额外工具方法 NEED TODO : 1、将数据持久化逻辑接入FPSMCapability-Savable接口 2、将BaseMap的MapCapability相关配套逻辑实现，并实现数据持久化、网络同步等功能。 3、将core/map中的接口实现为Capability。

--- a/build.gradle
+++ b/build.gradle
@@ -134,7 +134,7 @@ dependencies {
     implementation fg.deobf("curse.maven:tacz-lesraisins-tactical-equipements-1273094:6584599")
     implementation fg.deobf("maven.modrinth:counterstrikegrenade:${cs_grenade_version}")
     runtimeOnly fg.deobf("maven.modrinth:kotlin-for-forge:${kotlin_forge_version}")
-    runtimeOnly fg.deobf("maven.modrinth:cloth-config:${cloth_config_version}")
+    implementation fg.deobf("maven.modrinth:cloth-config:${cloth_config_version}")
 
     compileOnly fg.deobf("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
     //implementation fileTree(dir: 'libs', include: '**/*.jar')
