--- a/build.gradle
+++ b/build.gradle
@@ -83,13 +83,13 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven {
-        name 'Curse Maven'
-        url "https://www.cursemaven.com"
+        name = 'Curse Maven'
+        url = "https://www.cursemaven.com"
     }
 
     maven {
-        name 'IzzelAliz Maven'
-        url 'https://maven.izzel.io/releases/'
+        name = 'IzzelAliz Maven'
+        url = 'https://maven.izzel.io/releases/'
     }
 
     maven {
@@ -104,7 +104,10 @@ repositories {
         name = "Modrinth"
         url = "https://api.modrinth.com/maven"
     }
-    maven {url "https://maven.mohistmc.com/"}
+    maven {
+        name = "Mohist"
+        url = "https://maven.mohistmc.com/"
+    }
 
 }
 
@@ -137,6 +140,8 @@ dependencies {
     implementation fg.deobf("maven.modrinth:cloth-config:${cloth_config_version}")
 
     compileOnly fg.deobf("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
+    // JetBrains annotations for @NotNull and other annotations
+    compileOnly "org.jetbrains:annotations:24.0.1"
     //implementation fileTree(dir: 'libs', include: '**/*.jar')
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
