--- a/build.gradle
+++ b/build.gradle
@@ -170,25 +170,24 @@ tasks.named('jar', Jar).configure {
                     "Implementation-Title"    : project.name,
                     "Implementation-Version"  : project.jar.archiveVersion,
                     "Implementation-Vendor"   : mod_authors,
-                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")])
+                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                    "MixinConfigs"            : "${mod_id}.mixins.json"
+        ])
     }
 
     finalizedBy 'reobfJar'
 }
 
-// 生成源码JAR的任务
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     archiveClassifier = 'sources'
 }
-
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
 
-            // 可选：自定义 groupId, artifactId 和 version
             groupId = mod_group_id
             artifactId = mod_id
             version = mod_version
@@ -197,10 +196,22 @@ publishing {
         }
     }
 }
-//unobfJar
+
 tasks.register('unobfJar', Jar) {
     from sourceSets.main.output
     archiveClassifier = 'unobf'
+    manifest {
+        attributes([
+                "Specification-Title"     : mod_id,
+                "Specification-Vendor"    : mod_authors,
+                "Specification-Version"   : mod_version,
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : project.version,
+                "Implementation-Vendor"   : mod_authors,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "${mod_id}.mixins.json"
+        ])
+    }
 }
 
 configurations {
