--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,8 @@ modernui_forge_version=3.11.1.6
 kotlin_forge_version=4.11.0
 cloth_config_version=11.1.136+forge
 
-cs_grenade_version=1.2.8
-tacz_version=1.1.6-hotfix
+cs_grenade_version=1.4.0
+tacz_version=1.1.7
 
 mod_id=fpsmatch
 # The human-readable display name for the mod.
