--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin_forge_version=4.11.0
 cloth_config_version=11.1.136+forge
 
 cs_grenade_version=1.4.1
-tacz_version=1.1.7
+tacz_version=1.1.7-hotfix
 
 mod_id=fpsmatch
 # The human-readable display name for the mod.
