--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,12 @@
-buildscript {
-    repositories {
-        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-    }
-}
-
 plugins {
     id 'eclipse'
     id 'idea'
-    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
-    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'net.neoforged.moddev.legacyforge' version '2.0.140'
     id 'maven-publish'
 }
 
-apply plugin: 'org.spongepowered.mixin'
-
 group = mod_group_id
-file_version =  minecraft_version + "-" + file_version + "-" + mod_version
+file_version = minecraft_version + "-" + file_version + "-" + mod_version
 version = file_version
 
 base {
@@ -30,48 +17,61 @@ java {
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
-minecraft {
-    mappings channel: mapping_channel, version: mapping_version
 
-    copyIdeResources = true
+legacyForge {
+    version = "${minecraft_version}-${forge_version}"
+
+    parchment {
+        mappingsVersion = project.mapping_version
+        minecraftVersion = project.mapping_mc_version
+    }
+
+    validateAccessTransformers = true
+
     runs {
         configureEach {
-            workingDirectory project.file('run')
+            gameDirectory = project.file('run')
 
-            property 'forge.logging.markers', 'REGISTRIES'
+            systemProperty 'forge.logging.markers', 'REGISTRIES'
+            logLevel = org.slf4j.event.Level.DEBUG
 
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                "${mod_id}" {
-                    source sourceSets.main
-                }
-            }
         }
 
         client {
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            client()
+            systemProperty 'mixin.env.remapRefMap', 'true'
+            systemProperty 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', mod_id
+            systemProperty 'forge.enabledGameTestNamespaces', mod_id
         }
 
         server {
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            property 'forge.enabledGameTestNamespaces', mod_id
-            args '--nogui'
+            server()
+            systemProperty 'mixin.env.remapRefMap', 'true'
+            systemProperty 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            systemProperty 'forge.enabledGameTestNamespaces', mod_id
+            programArgument '--nogui'
         }
 
         gameTestServer {
-            property 'forge.enabledGameTestNamespaces', mod_id
+            type = "gameTestServer"
+            systemProperty 'forge.enabledGameTestNamespaces', mod_id
         }
 
         data {
-            workingDirectory project.file('run-data')
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            data()
+            gameDirectory = project.file('run-data')
+            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
         }
     }
+
+
+    mods {
+        "${mod_id}" {
+            sourceSet sourceSets.main
+        }
+    }
+
 }
 
 mixin {
@@ -112,9 +112,8 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     // Modern UI core framework
-    minecraftLibrary("icyllis.modernui:ModernUI-Core:${modernui_core_version}") {
+    additionalRuntimeClasspath(implementation("icyllis.modernui:ModernUI-Core:${modernui_core_version}")) {
         exclude group: "org.apache.logging.log4j", module: "log4j-core"
         exclude group: "org.apache.logging.log4j", module: "log4j-api"
         exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
@@ -123,7 +122,7 @@ dependencies {
         exclude group: "com.ibm.icu", module: "icu4j"
         exclude group: "it.unimi.dsi", module: "fastutil"
     }
-    minecraftLibrary("icyllis.modernui:ModernUI-Markdown:${modernui_core_version}") {
+    additionalRuntimeClasspath(implementation("icyllis.modernui:ModernUI-Markdown:${modernui_core_version}")) {
         exclude group: "org.apache.logging.log4j", module: "log4j-core"
         exclude group: "org.apache.logging.log4j", module: "log4j-api"
         exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
@@ -132,50 +131,46 @@ dependencies {
         exclude group: "com.ibm.icu", module: "icu4j"
         exclude group: "it.unimi.dsi", module: "fastutil"
     }
-    implementation fg.deobf("icyllis.modernui:ModernUI-Forge:${minecraft_version}-${modernui_forge_version}")
-    implementation fg.deobf("maven.modrinth:timeless-and-classics-zero:${tacz_version}")
-    implementation fg.deobf("curse.maven:tacz-lesraisins-tactical-equipements-1273094:6584599")
-    implementation fg.deobf("maven.modrinth:counterstrikegrenade:${cs_grenade_version}")
-    runtimeOnly fg.deobf("maven.modrinth:kotlin-for-forge:${kotlin_forge_version}")
-    implementation fg.deobf("maven.modrinth:cloth-config:${cloth_config_version}")
+    modImplementation "icyllis.modernui:ModernUI-Forge:${minecraft_version}-${modernui_forge_version}"
+    modImplementation "maven.modrinth:timeless-and-classics-zero:${tacz_version}"
+    modImplementation "curse.maven:tacz-lesraisins-tactical-equipements-1273094:6584599"
+    modImplementation "maven.modrinth:counterstrikegrenade:${cs_grenade_version}"
+    modRuntimeOnly "maven.modrinth:kotlin-for-forge:${kotlin_forge_version}"
+    modImplementation "maven.modrinth:cloth-config:${cloth_config_version}"
 
-    compileOnly fg.deobf("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
+    modCompileOnly "org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT"
     // JetBrains annotations for @NotNull and other annotations
-    compileOnly "org.jetbrains:annotations:24.0.1"
+    modCompileOnly "org.jetbrains:annotations:24.0.1"
     //implementation fileTree(dir: 'libs', include: '**/*.jar')
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
-tasks.named('processResources', ProcessResources).configure {
+var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
     var replaceProperties = [
-            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
-            forge_version: forge_version, forge_version_range: forge_version_range,
-            loader_version_range: loader_version_range,
-            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
-            mod_authors: mod_authors, mod_description: mod_description,
+            minecraft_version      : minecraft_version,
+            minecraft_version_range: minecraft_version_range,
+            forge_version          : forge_version,
+            forge_version_range    : forge_version_range,
+            loader_version_range   : loader_version_range,
+            mod_id                 : mod_id,
+            mod_name               : mod_name,
+            mod_license            : mod_license,
+            mod_version            : mod_version,
+            mod_authors            : mod_authors,
+            mod_description        : mod_description
     ]
-
     inputs.properties replaceProperties
-
-    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
-        expand replaceProperties + [project: project]
-    }
+    expand replaceProperties
+    from "src/main/templates"
+    into "build/generated/sources/modMetadata"
 }
+sourceSets.main.resources.srcDir generateModMetadata
+legacyForge.ideSyncTask generateModMetadata
 
-tasks.named('jar', Jar).configure {
-    manifest {
-        attributes(["Specification-Title"     : mod_id,
-                    "Specification-Vendor"    : mod_authors,
-                    "Specification-Version"   : mod_version, // We are version 1 of ourselves
-                    "Implementation-Title"    : project.name,
-                    "Implementation-Version"  : project.jar.archiveVersion,
-                    "Implementation-Vendor"   : mod_authors,
-                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                    "MixinConfigs"            : "${mod_id}.mixins.json"
-        ])
-    }
-
-    finalizedBy 'reobfJar'
+jar {
+    manifest.attributes([
+            "MixinConfigs": "${mod_id}.mixins.json"
+    ])
 }
 
 task sourcesJar(type: Jar) {
@@ -194,37 +189,6 @@ publishing {
 
             artifact sourcesJar
         }
-    }
-}
-
-tasks.register('unobfJar', Jar) {
-    from sourceSets.main.output
-    archiveClassifier = 'unobf'
-    manifest {
-        attributes([
-                "Specification-Title"     : mod_id,
-                "Specification-Vendor"    : mod_authors,
-                "Specification-Version"   : mod_version,
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : project.version,
-                "Implementation-Vendor"   : mod_authors,
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs"            : "${mod_id}.mixins.json"
-        ])
-    }
-}
-
-configurations {
-    unobfElements {
-        canBeConsumed = true
-        canBeResolved = false
-
-        attributes.attribute(
-                Usage.USAGE_ATTRIBUTE,
-                objects.named(Usage, "java-runtime-unobf")
-        )
-
-        outgoing.artifact(tasks.unobfJar)
     }
 }
 
